EXTRA_DIST = images/ship.png images/star.png images/start_option.png \
	images/score_option.png images/options_option.png \
	images/exit_option.png images/keyblue.png images/keygreen.png \
	images/keyyellow.png images/keygreen.png images/keypink.png \
	images/keyred.png images/arrowred.png images/arrowblue.png \
	images/arrowyellow.png images/arrowpink.png images/arrowgreen.png

nobase_dist_pkgdata_DATA = $(EXTRA_DIST)

