EXTRA_DIST = images/ship.png images/star.png images/start_option.png \
	images/score_option.png images/options_option.png \
	images/exit_option.png images/keyblue.png images/keygreen.png \
	images/keyyellow.png images/keygreen.png images/keypink.png \
	images/keyred.png images/arrowred.png images/arrowblue.png \
	images/arrowyellow.png images/arrowpink.png images/arrowgreen.png \
	images/mine.png images/levelcomp.png images/shipsmall.png \
	images/gateway.png images/hscore.png images/red_rock_surface.png \
	images/rock_surface.png images/snow_surface.png \
	images/dirt_surface.png images/grass_surface.png \
	images/red_rock_surface2.png images/rock_surface2.png \
	images/snow_surface2.png images/dirt_surface2.png \
	images/grass_surface2.png images/fade.png images/fuelmeter.png \
	images/fuelbar.png images/speedmeter.png images/particle.png \
	images/landingpad.png images/landingpadred.png

nobase_dist_pkgdata_DATA = $(EXTRA_DIST)
